[project]
name = "ethical_guardrails_lib"
version = "0.1.0"
description = "This solution includes a set of Ethical Guardrails designed to detect and prevent inappropriate, biased, or harmful outputs from AI systems."
readme = "README.md"
authors = [
    { name = "Joseph Eberle", email = "josepheberle@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-library-test = "ethical_guardrails_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
