[project]
name = "ethical-guardrails-lib"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Root", email = "kyle@wellconnecteds.co" }
]
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "rapidfuzz>=3.13.0",
]

[project.scripts]
ethical-guardrails-lib = "ethical_guardrails_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
